deploy final (корректировки для системы доставки)